2007-04-010  Vitaly Alexeev <tishka92@yahoo.com>

	* a lot of files:
	rewritten gameswf_timer.* (listener was used),
	removed gameswf_xmlsocket.* (obsoletly, the new version - as_xmlsocket.*),
	added test_xmlsocket.(fla,swf),
	cleaning useless code

2007-04-08  Vitaly Alexeev <tishka92@yahoo.com>

	* base/tu_file.cpp: netfile stuff moved from http_client.cpp
	* net/a lot files,
	* gameswf/a lot of files: completely rewritten  XMLSocket stuff,
	using net/net_interface_tcp.*
	* gameswf/as_classes/as_xmlsocket.*: added new files

2007-04-05  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_xmlsocket.cpp
	* gameswf/gameswf_xml.*
	* gameswf/gameswf_test_ogl.cpp
	* gameswf/as_classes/as_MovieClipLoader.cpp
	fixed bug #1404428 [LIBXML2 support no longer compiles]

2007-04-05  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_impl.cpp,
	* gameswf/gameswf_font.*: added tag 62 implementation (DefineFontInfo2)

2007-04-05  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_sound_handler.cpp: fixed one more stream sound bug

2007-04-05  Vitaly Alexeev <tishka92@yahoo.com>

	* base/tu_file.cpp: new tu_file("http://...") returns
	m_data=NULL if there was a failure
	* gameswf/a lot of files: removed useless restart(),
	fixed stream sound bug that have been showing up 
	at movie with one frame, the operations that are executed at removing
	dlist object moved to remove() function
	* net/http_client.*
	* net/net_interface_tcp.cpp: porting to Linux

2007-04-03  Vitaly Alexeev <tishka92@yahoo.com>

	* net/http_client.cpp,
	* net/net_interface_tcp.cpp: porting to Linux

2007-04-03  Vitaly Alexeev <tishka92@yahoo.com>

	* a lot of files: removed useless progress_bar stuff &
	the calling of useless get_movie_info().
	The movie file is opened only once. It is important for network

2007-04-03  Vitaly Alexeev <tishka92@yahoo.com>

	* net/http_client.cpp: sprintf() ==> snprintf()

2007-04-03  Vitaly Alexeev <tishka92@yahoo.com>

	* net/http_client.cpp: forgot to cleanup
