@@ -6,13 +6,13 @@
 #include "gameswf_timers.h"
 #include "gameswf_root.h"
 
-// hack: timer_id is't a number but the reference
+// hack: timer_id is't a number but the as_object*
 
 namespace gameswf 
 {
 
-  void  as_global_setinterval(const fn_call& fn)
-  {
+	void  as_global_setinterval(const fn_call& fn)
+	{
 		as_timer* timer = NULL;
 		if (fn.nargs >= 3)
 		{
@@ -26,16 +26,18 @@ namespace gameswf
 				func = fn.arg(0);
 			}
 
+			int x=fn.arg(3).get_type();
+
 			if (func.get_type() == as_value::AS_FUNCTION)
 			{
-				timer = new as_timer(func, fn.arg(2).to_number());
+				timer = new as_timer(func, fn.arg(2).to_number(), fn);
 			}
 		}
 		fn.result->set_as_object_interface(timer);
-  }
+	}
 
-  void  as_global_clearinterval(const fn_call& fn)
-  {
+	void  as_global_clearinterval(const fn_call& fn)
+	{
 		if (fn.nargs == 1)
 		{
 			if (fn.arg(0).to_object())
@@ -49,12 +51,23 @@ namespace gameswf
 		}
 	}
 
-	as_timer::as_timer(as_value& func, double interval):
+	as_timer::as_timer(as_value& func, double interval, const fn_call& fn):
 		m_interval((float) interval / 1000.0f),
 		m_func(func),
 		m_delta_time(0.0f)
 	{
-			get_root()->add_listener(this, movie_root::ADVANCE);
+		// get params
+		for (int i = 3; i < fn.nargs; i++)
+		{
+			m_param.push_back(fn.arg(i));
+		}
+
+		get_root()->add_listener(this, movie_root::ADVANCE);
+	}
+
+	as_timer::~as_timer()
+	{
+//		printf("~as_timer\n");
 	}
 
 	void as_timer::advance(float delta_time)
@@ -69,9 +82,13 @@ namespace gameswf
 			as_environment* env = m_func.to_as_function()->m_env;
 			assert(env);
 
-	//		env->push(is_connected);
-			call_method(m_func, env, NULL, 0, env->get_top_index());
-	//		env->drop(1);
+			int n = m_param.size();
+			for (int i = 0; i < n; i++)
+			{
+				env->push(m_param[i]);
+			}
+			call_method(m_func, env, NULL, n, env->get_top_index());
+			env->drop(n);
 		}
 	}
 
