@@ -18,8 +18,10 @@ namespace gameswf
 		float m_interval;	// sec
 		as_value m_func;
 		float m_delta_time;
+		array<as_value> m_param;
 
-		as_timer(as_value& func, double intarval);
+		as_timer(as_value& func, double intarval, const fn_call& fn);
+		~as_timer();
 
 		virtual void advance(float delta_time);
 		virtual as_timer* cast_to_as_timer() { return this; }
