@@ -1,4 +1,13 @@
-2007-04-010  Vitaly Alexeev <tishka92@yahoo.com>
+2007-04-10  Vitaly Alexeev <tishka92@yahoo.com>
+
+	* gameswf/as_classes/as_array.cpp: processing of the following case is added
+	new Array("ab", "cd", "ef", "gh", ...);
+	* gameswf/gameswf_timer.*: processing of the multiparam setInterval
+	function is added
+	* gameswf/gameswf_root.cpp: protection of listener object against removal
+	is added
+
+2007-04-10  Vitaly Alexeev <tishka92@yahoo.com>
 
 	* a lot of files:
 	rewritten gameswf_timer.* (listener was used),
